iter_language/tests/corpus/invalid/queue-sqs-conflicting-identity.iter
queue sqs {
  queue_url    = "https://sqs.us-east-1.amazonaws.com/123/q"
  queue_name   = "q"
  account_id   = "123456789012"
  region       = "us-east-1"
}

workspace local {
  base = "."
}

agent claude {
  mode = print
  command = "claude"
}
